# med-enterprise-dash

./: .gitignore  .gitmodules  Makefile  README.org  config.toml  myapp.py  pyproject.toml
src/med_enterprise_dash/: __init__.py  app.py  auth.py  config.py  med_config.py  med_enterprise_dash.py  micro_services.py  routes.py  server.py  utils.py  views.py
src/med_enterprise_dash/apps/: appointments.py  appointments_alternate.py  data_entry.py  events.py  lookup.py  portal.py  routes.py  status.py
src/med_enterprise_dash/micro_services/: permissions.py  status.py
src/med_enterprise_dash/routes/: home.py  routes.py  utils.py
src/med_enterprise_dash/static/: main.css  styles.css
src/med_enterprise_dash/templates/: apps.jinja2  base.jinja2  footer.jinja2  header.jinja2  home.jinja2  login_verification.jinja2  logout_callback.jinja2  menu.jinja2  profile.jinja2
src/med_enterprise_dash/utils/: footer.py  session.py  toml.py
src/med_enterprise_dash/views/: appointments.py  appointments_alternate.py  apps.py  data_entry.py  events.py  file_archive.py  home.py  login.py  login_verification.py  logout.py  logout_callback.py  lookup.py  portal.py  profile.py  status.py  test_apis.py
src/med_testing_apis/: routes.py  server.py
src/med_testing_apis/views/: data_entry.py  status.py  testing_apis.py
tests/: test_med_enterprise_dash.py  test_views.py
tests/integration_tests/: test_permissions_endpoint.py
tests/unit_tests/: test_auth.py  test_config.py  test_med_enterprise_dash.py  test_micro_services.py  test_routes.py  test_server.py  test_utils.py  test_views.py
(+56 files in other folders)
